--- a/voorstel/LievensLoeka-BPvoorstel.tex
+++ b/voorstel/LievensLoeka-BPvoorstel.tex
@@ -20,23 +20,15 @@
 % \course{Bachelor thesis}
 % \assignmenttype{Research proposal}
 
-\academicyear{2022-2023} % TODO: pas het academiejaar aan
+\academicyear{2023-2023} % TODO: pas het academiejaar aan
 
 % TODO: Werktitel
-\title{Vul hier de voorgestelde titel van je onderzoek in}
+\title{Optimaliseren van gegevensverwerking in Microsoft Azure: Een vergelijkende analyse van implementatiemethoden voor Extractie, Transformatie en Laden (ETL) en Extractie, Laden en Transformatie (ELT)}
 
-% TODO: Studentnaam en emailadres invullen
-\author{Ernst Aarden}
-\email{ernst.aarden@student.hogent.be}
+\author{Loeka Lievens}
+\email{loeka.lievens@student.hogent.be}
 
-% TODO: Medestudent
-% Gaat het om een bachelorproef in samenwerking met een student in een andere
-% opleiding? Geef dan de naam en emailadres hier
-% \author{Yasmine Alaoui (naam opleiding)}
-% \email{yasmine.alaoui@student.hogent.be}
-
-% TODO: Geef de co-promotor op
-\supervisor[Co-promotor]{S. Beekman (Synalco, \href{mailto:sigrid.beekman@synalco.be}{sigrid.beekman@synalco.be})}
+\supervisor[Co-promotor]{K. Van Damme (Net IT, \href{mailto:koen.vandamme@net-it.be}{koen.vandamme@net-it.be})}
 
 % Binnen welke specialisatierichting uit 3TI situeert dit onderzoek zich?
 % Kies uit deze lijst:
@@ -49,13 +41,13 @@
 % - Als het onderzoek niet past binnen een van deze domeinen specifieer je deze
 %   zelf
 %
-\specialisation{Mobile \& Enterprise development}
-\keywords{Scheme, World Wide Web, $\lambda$-calculus}
+\specialisation{Databank \& big data}
+\keywords{Microsoft Azure, gegevensverwerking, ETL, ELT}
 
 \begin{document}
 
 \begin{abstract}
-  Hier schrijf je de samenvatting van je voorstel, als een doorlopende tekst van één paragraaf. Let op: dit is geen inleiding, maar een samenvattende tekst van heel je voorstel met inleiding (voorstelling, kaderen thema), probleemstelling en centrale onderzoeksvraag, onderzoeksdoelstelling (wat zie je als het concrete resultaat van je bachelorproef?), voorgestelde methodologie, verwachte resultaten en meerwaarde van dit onderzoek (wat heeft de doelgroep aan het resultaat?).
+  In dit onderzoek gaan we gaan kijken naar de mogelijkheden die er zijn om ETL's en ELT's te gaan implementeren binnen Microsoft Azure. Doordat Microsoft Azure enorm groot is en veel verschillende tools heeft kan het vaak moeilijk zijn om de juiste te gaan kiezen. Ook afhankelijk van de situatie kan het kiezen van de juiste tool cruciaal zijn. We gaan dus een vergelijkende analyse gaan uitvoeren op de verschillende mogelijkheden die er zijn. Per optie zullen we dus ook een proof-of-concept gaan uitwerken zodat we ook zeker kunnen vergelijken in performantie etc. Dit zal resulteren in een gedetailleerd vergelijkingsrapport met een overzicht van de meest veelbelovende implementatiemogelijkheden.
 \end{abstract}
 
 \tableofcontents
