--- a/voorstel/LievensLoeka-BPvoorstel.tex
+++ b/voorstel/LievensLoeka-BPvoorstel.tex
@@ -47,7 +47,7 @@
 \begin{document}
 
 \begin{abstract}
-  In dit onderzoek gaan we gaan kijken naar de mogelijkheden die er zijn om ETL's en ELT's te gaan implementeren binnen Microsoft Azure. Doordat Microsoft Azure enorm groot is en veel verschillende tools heeft kan het vaak moeilijk zijn om de juiste te gaan kiezen. Ook afhankelijk van de situatie kan het kiezen van de juiste tool cruciaal zijn. We gaan dus een vergelijkende analyse gaan uitvoeren op de verschillende mogelijkheden die er zijn. Per optie zullen we dus ook een proof-of-concept gaan uitwerken zodat we ook zeker kunnen vergelijken in performantie etc. Dit zal resulteren in een gedetailleerd vergelijkingsrapport met een overzicht van de meest veelbelovende implementatiemogelijkheden.
+  In dit onderzoek wordt gekeken naar de mogelijkheden die er zijn om Extractie, Transformatie en Laden (ETL) en Extractie, Laden en Transformatie (ELT) te implementeren binnen Microsoft Azure. Doordat Microsoft Azure groot is en veel verschillende tools heeft kan het vaak moeilijk zijn om de juiste te kiezen. Ook afhankelijk van de situatie kan het kiezen van de juiste tool cruciaal zijn. Er zal een vergelijkende analyse uitgevoerd worden op de verschillende mogelijkheden die er zijn. Per optie zal er dus ook een proof-of-concept uitgewerkt worden zodat er ook zeker kan vergeleken worden in performantie etc. Dit zal resulteren in een gedetailleerd vergelijkingsrapport, inclusief aanbeveling voor de meest geschikte aanpak voor het implementeren van ETL's of ELT's.
 \end{abstract}
 
 \tableofcontents
