--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -3,7 +3,7 @@
 \section{Introductie}%
 \label{sec:introductie}
 
-Het implementeren van ETL's en ELT's spelen een kritieke rol in de development binnen Net IT. Doordat Net IT een Microsoft gebasseerd bedrijf is gaan we dus onderzoeken naar de mogelijkheden voor het implementeren van ETL's en ELT's binnen in Microsoft Azure. Momenteel gebruikt Net IT vooral Azure Data Factory en Azure Synapse Analytics. Hierbij wordt er gebruik gemaakt van de UI tools die Azure Data Factory aanbiedt. We gaan kijken of er andere mogelijkheden zijn om dit bijvoorbeeld via code te gaan doen (bijvoorbeeld in Azure Databricks). Deze gaan we dan gaan vergelijken in performantie, kostprijs (voor dezelfde performantie), complexiteit, moeilijkheidsgraad in opzet en configuratie van de resources (bicep templates), verschil in implementatietijd en mogelijkheden van de tool. De methode die gebruikt zal worden is een gemengde aanpak gebasseerd op literatuuronderzoek en het opstellen van proof-of-concepts. Dit zal resulteren in een rapport van aanbevelingen voor Net IT zodat men betere beslissingen kan maken bij het implementeren van ETL's en ELT's binnen in Microsoft Azure.
+Het implementeren van ETL's en ELT's speelt een kritieke rol in de development binnen Net IT. Net IT is een bedrijf gespecialiseerd in Customer Relationship Management (CRM). Een CRM-systeem is een applicatie om voeling te houden met klanten en om processen te stroomlijnen en meer winst te genereren. Doordat Net IT een Microsoft Partner is zullen ze CRM-toepassingen implementeren met Microsoft Dynamics 365 en intelligente bedrijfstoepassingen met Microsoft Power Platform. Binnen Microsoft 365 Dynamics Customer Engagement worden er CSV bestanden geëxporteerd naar Azure Data Lake. Deze data wordt minstens dagelijks opgekuist, aangevuld en opgesplitst om naar de klant te kunnen doorsturen via SFTP of e-mail. Momenteel wordt dit gedaan door ETL's en ELT's te implementeren in Azure Data Factory, gebruik makend van de UI tools die aangeboden worden. Doordat dit niet de enige mogelijkheid is om dit te implementeren zal er gekeken worden naar de verschillende opties die er zijn. Aangezien Net IT een Microsoft Partner is zal er vooral gekeken worden binnen Microsoft Azure. Deze verschillende mogelijkheden zullen vergeleken worden op basis van performantie, kostprijs (voor dezelfde performantie), complexiteit, moeilijkheidsgraad in opzet en configuratie van de resources, verschil in implementatietijd en mogelijkheden van de tool. De methode die gebruikt zal worden is een gemengde aanpak gebasseerd op literatuuronderzoek en het opstellen van proof-of-concepts voor de gegeven use case van Net IT. Dit zal resulteren in een gedetailleerd vergelijkingsrapport, inclusief aanbeveling voor de meest geschikte aanpak voor het implementeren van ETL's of ELT's voor de gegeven use case.
 
 \section{State-of-the-art}%
 \label{sec:state-of-the-art}
@@ -12,31 +12,32 @@ Als data data engineer krijgt men data in veel verschillende vormen. Het is dus 
 
 In Azure zijn er meerdere mogelijkheden voor het implementeren van ETL's en ELT's. Één van deze mogelijkheden is Azure Data Factory. Zoals te zien in de enquête van~\textcite{Sreemathy2021} is dit de meest populaire data integratie service die aangeboden wordt door de cloud providers. Binnen Azure Data Factory kan er gebruik gemaakt worden van Mapping Data Flows, dit is een codevrije manier waarmee ETL's opgebouwd kunnen worden. De logica achter de ETL kan hierna makkelijk getest worden op live data en samples.~\autocite{Kromer2022a} 
 
-Daarnaast biedt Azure ook Azure Databricks aan. Het verschil hierbij is dat de ETL's worden geïmplementeerd via code terwijl dat bij Azure Data Factory via de UI tools kan gebeurt. Azure Databricks is gebasseerd op het Apache Spark open source project. Het grote voordeel is dat het platform het toelaat om makkelijker te kunnen samen werken. Daarnaast is Apache Spark niet enkel gelimiteerd tot het maken van ETL's maar kan het ook gebruikt worden voor Machine Learning etc.~\autocite{Etaati2019}
+Daarnaast biedt Azure ook Azure Databricks aan. Het verschil hierbij is dat de ETL's worden geïmplementeerd via code terwijl dat bij Azure Data Factory via de UI tools kan gebeurt. Azure Databricks is gebasseerd op het Apache Spark open source project. Het grote voordeel is dat het platform het toelaat om makkelijker te kunnen samen werken. Daarnaast is Apache Spark niet enkel gelimiteerd tot het maken van ETL's maar kan het ook gebruikt worden voor real-time analytics, machine learning, graph processing, etc.~\autocite{Etaati2019}
+
+Azure is niet de enigste cloud provider die ETL tools aanbiedt. Zo heeft AWS bijvoorbeeld AWS Glue~\autocite{Khan2024} en Google Cloud heeft Google Data Fusion.~\autocite{Jaiswal2022}
 
 \section{Methodologie}%
 \label{sec:methodologie}
 
 \begin{center}
-    \includegraphics{graphics/methodologie.png}    
+    \includegraphics[width=0.2\textwidth]{graphics/methodologie.png}    
 \end{center}
 
+De eerste fase is het literatuuronderzoek. Hierbij wordt er gekeken naar welke mogelijkheden er zijn voor het implementeren van ETL's en ELT's. Er zal vooral gefocust worden op de mogelijkheden binnen Azure maar ook andere opties zullen bekeken worden. Dit zal gedaan worden met behulp van academische onderzoekstools zoals Google Scholar en andere relevante databanken en bronnen. Ook de documentatie van Azure, casestudies van bedrijven die gebruik maken van Azure en blogs van experts op dit vakgebied zullen hier zeker bij van pas komen. Deze fase zal ook zeker in samenwerkingen met Net IT gebeuren zodat de huidige gebruikte technologieën voor het implementeren van ETL's en ELT's zeker niet uitgesloten worden. Dit onderdeel zal naar verwachting vier weken in beslag nemen. 
 
-Onze eerste fase is het literatuuronderzoek. Hierbij gaan we gaan kijken welke mogelijkheden er zijn voor het implementeren van ETL's en ELT's binnen in Azure. Dit zullen we doen met behulp van academische onderzoekstools zoals bijvoorbeeld Google Scholar en andere relevante databanken en bronnen. Ook de documentatie van Azure, casestudies van bedrijven die gebruik maken van Azure en blogs van experts op dit vakgebied zullen hier zeker bij van te pas komen. Deze fase zal ook zeker in samenwerkingen met Net IT gebeuren zodat de huidige gebruikte technologieën voor het implementeren van ETL's en ELT's zeker niet uitgesloten worden. Dit onderdeel zal naar verwachting 4 weken in beslag nemen. 
+In de tweede fase zullen de resultaten van het literatuuronderzoek samengevat worden in een long list. Dit onderdeel zal naar verwachting twee weken duren.
 
-In de tweede fase zullen we de resultaten van het literatuuronderzoek samenvatten in een long list. Op basis hiervan kunnen we dan verder gaan in ons onderzoek. Doordat dit een kleine fase is zal dit bij de tijd van de eerste fase horen.
+In de derde fase zullen de meest interessante opties uit de long list samengevat worden in een short list. Hierbij zal gekeken worden naar wat het interessantst is voor Net IT. Doordat dit een kleine fase is zal dit bij de tijd van de tweede fase horen.
 
-In de derde fase zullen we op basis van de long list een proof-of-concept uitwerken voor elke mogelijkheid dat er binnen Azure is. We zullen een situatie opzetten met dummy data in een data lake. Het doel is dat er op basis van deze data export bestanden zullen gemaakt worden. We gaan kijken naar performantie, kostprijs, complexiteit, moeilijkheidsgraad in opzet en configuratie van de resources, verschil in implementatietijd en de mogelijkheden die de tool aanbied. We zullen de opties dan ook gaan vergelijken met elkaar. Belangrijk is dat de tests representatief zijn voor werkelijke implementaties binnen Net IT en dat deze ook zo nauwkeurig mogelijk gaan gebeuren. Dit zal resulteren in een short list van mogelijke opties die er zijn. Dit zal de langste fase zijn en zal dus 6 weken in beslag nemen.
+In de vierde fase zullen er vergelijkingscriteria opgesteld worden voor de gegeven use case door Net IT. Het is belangrijk om te weten wat er moet vergeleken worden. Belangrijk om op te merken is dat niet alles even meetbaar zal zijn. Er zal dus goed gekeken worden naar hoe de vergelijkingscriteria gemeten kunnen worden. Dit onderdeel zal naar verwachting één week duren.
 
-De vierde en laatste fase, die naar verwachting twee weken zal duren, is de evaluatie van de opties die we hebben onderzocht. Het doel is om te tonen welke optie het beste is. Het kan zijn dat niet steeds één optie de beste is. Daardoor zal het resultaat van deze analyse een gedetailleerd vergelijkingsrapport zijn en aanbevelingen, per scenario, voor welke optie het beste zou kunnen zijn.
+In de vijfde fase zal er op basis van de short list en vergelijkingscriteria een proof-of-concept uitgewerkt worden voor elke mogelijkheid dat er binnen Azure is. Er zal een situatie (gegeven door Net IT) opgezet worden met dummy data in een data lake. Het doel is dat er op basis van deze data export bestanden zullen gemaakt worden. Dit zal de langste fase zijn en zal dus vier weken in beslag nemen.
+
+De zesde en laatste fase, die naar verwachting één week zal duren, is de evaluatie van de opties die we hebben onderzocht. Het doel is om te tonen welke optie het beste is. Daardoor zal het resultaat van deze analyse een gedetailleerd vergelijkingsrapport zijn en een aanbeveling voor welke optie het beste is.
 
 
 %---------- Verwachte resultaten ----------------------------------------------
 \section{Verwacht resultaat, conclusie}%
 \label{sec:verwachte_resultaten}
 
-Het resultaat zal een gedetailleerd vergelijkingsrapport zijn met een overzicht van de meest veelbelovende implementatiemogelijkheden binnen Azure voor ETL's en ELT's. Het rapport zal niet alleen een overzicht bieden van de verschillende opties maar ook gedetailleerde richtlijnen per tool. Dit stelt Net IT in staat om niet alleen de beste optie te identificeren voor hun specifieke situatie maar ook om een dieper inzicht te krijgen in de operationele implicaties, kostenstructuur, etc. 
-
-Het is belangrijk om op te merken dat de aanbevelingen flexibel zullen zijn en kunnen variëren naargelang wat voor ETL of ELT er zal geïmplementeerd moeten worden.
-
-
+Het resultaat zal een gedetailleerd vergelijkingsrapport zijn, inclusief aanbevelingen voor de meest geschikte aanpak voor het implementeren van ETL's of ELT's voor de gegeven use case. Daarnaast zal er ook een resultaat per vergelijkingscriteria zijn zodat Net IT zelf ook een dieper inzicht krijgt in bijvoorbeeld operationele implicaties, kostenstructuur, etc.
