--- a/voorstel/voorstel.bib
+++ b/voorstel/voorstel.bib
@@ -67,4 +67,18 @@
   year      = {2019},
 }
 
+@Article{Khan2024,
+  author = {Khan, Bilal and Jan, Saifullah and Khan, Wahab and Chughtai, Muhammad Imran},
+  date   = {2024-01-26},
+  title  = {An Overview of ETL Techniques, Tools, Processes and Evaluations in Data Warehousing},
+  url    = {https://cdn.techscience.cn/files/jbd/2024/TSP_JBD-6/TSP_JBD_46223/TSP_JBD_46223.pdf},
+}
+
+@Article{Jaiswal2022,
+  author = {Nilesh Jaiswal},
+  date   = {2022-12-21},
+  title  = {Data Fusion Basics},
+  url    = {https://medium.com/google-cloud/data-fusion-basic-concepts-c40b09efd695},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
